feat: add JPA entities and repositories for Flight search and Booking api
